--- a/src/App.css
+++ b/src/App.css
@@ -59,15 +59,11 @@ a{
 }
 
 .form{
-    width: max-content;
-    border-radius: 5px;
     background-color: var(--button);
-    display: flex;
-    flex-direction: column;
 }
 ul{
     padding: 0.5rem;
-    width: 1200px;
+    width: 850px;
     display: flex;
     gap: 1.2rem;
     list-style-type: none;
@@ -76,9 +72,14 @@ ul:hover{
     background-color: var(--background-body);
 }
 li{
-    width: 22%;
+    width: 28%;
 }
 
 .title{
     border-bottom: 3px solid var(--background-body);
+}
+
+.icons{
+    font-size: 1.4rem;
+    width: max-content;
 }
