--- a/src/Components/User/user.css
+++ b/src/Components/User/user.css
@@ -22,6 +22,7 @@
     align-items: center;
     height: 100%;
     border-radius: 5px;
+    color: var(--text-color);
 }
 .icons-table > div{
     display: flex;
