--- a/src/Components/UserCreate/userCreate.css
+++ b/src/Components/UserCreate/userCreate.css
@@ -8,13 +8,30 @@
     display: flex;
     flex-direction: column;
     width: max-content;
+    gap: 10px;
+}
+
+.modal-form > input{
+    width: 300px;
+    font-size: 18px;
+    color: var(--text-color);
+    background-color: var(--form);
+    padding: 10px;
+}
+
+.modal-form > h3{
+    font-size: 22px;
+    font-weight: 700;
+    color: var(--text-alternative);
+    text-align: center;
+    text-shadow: 3px 3px 3px rgba(0,0,0,0.1);
 }
 
 .modal-overlay{
     display: flex;
     justify-content: center;
     align-items: center;
-    background: transparent;
+    background: rgba(0,0,0,0.2);
     position: fixed;
     top: 0;
     bottom: 0;
@@ -23,13 +40,16 @@
 }
 
 .modal-content{
-    width: 90%;
-    max-width: 400px;
-    background-color: var(--modal);
-    padding: 10px;
-    border-radius: 5px;
+    background-color: transparent;
 }
 
 button{
+    font-size: 18px;
+    color: var(--text-alternative);
+    background-color: var(--button);
+    padding: 10px;
+    text-shadow: 3px 3px 3px rgba(0,0,0,0.1);
     float: right;
+    width: 100%;
+    margin-bottom: 10px;
 }
