--- a/src/App.css
+++ b/src/App.css
@@ -77,7 +77,7 @@ body{
     display: flex;
     flex-direction: row;
     font-size: 25px;
-    height: 100%;
+    height: 50px;
     gap: 20px;
     justify-content: center;
     align-items: center;
@@ -85,7 +85,28 @@ body{
     padding: 4px 8px;
     border-radius: 5px;
     color: var(--text-alternative);
+    cursor: pointer;
 }
 .icons > svg{
     filter: drop-shadow(3px 3px 3px rgb(0 0 0 / 0.1));
+}
+
+@media screen and (max-width:890px) {
+    .email{
+        display: none;
+    }
+
+    .container-table{
+        display: flex;
+    }
+
+    .name, .gift{
+        min-width: 200px;
+        height: 50px;
+    }
+
+    .icons{
+        min-width: 100px;
+        height: 50px;
+    }
 }
