--- a/src/Components/User/user.css
+++ b/src/Components/User/user.css
@@ -2,7 +2,7 @@
     background-color: var(--form);
     border-radius: 5px;
     text-align: center;
-    height: 100%;
+    height: 50px;
 }
 
 .utils-form > h3{
@@ -20,12 +20,18 @@
     justify-content: center;
     background-color: var(--form);
     align-items: center;
-    height: 100%;
+    height: 50px;
     border-radius: 5px;
     color: var(--text-color);
+    cursor: pointer;
 }
 .icons-table > div{
     display: flex;
     align-items: center;
 }
-
+@media screen and (max-width:890px) {
+    .icons-table{
+        min-width: 100px;
+        height: 50px;
+    }
+}
