--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,7 @@ input, button{
     border-radius: 5px;
     border: none;
     cursor: pointer;
+    color: var(--text-color);
 }
 
 ::placeholder{
