--- a/src/Components/Tables/Table/table.css
+++ b/src/Components/Tables/Table/table.css
@@ -11,7 +11,7 @@
 }
 
 .table{
-    grid-column: 3 / span 8;
+    grid-column: 3 / span 7;
 }
 
 .name{
@@ -57,6 +57,11 @@
     filter: drop-shadow(3px 3px 3px rgb(0 0 0 / 0.1));
 }
 
+.icons > div{
+    display: flex;
+    align-items: center;
+}
+
 @media screen and (max-width:890px) {
     .email{
         display: none;
@@ -78,7 +83,7 @@
     }
     .table{
         width: 100%;
-        max-width: 520px;
+        max-width: 420px;
         height: 50px;
     }
 }
