Adição do Cadastro

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
     --text-color: #436751;
     --text-alternative: #FFFFFF;
     --button: #75FAAA;
+    --button-dark: #419e66;
     --modal: #DDF4E7;
     --form: #EBFFF3;
 }
