--- a/src/Components/Signup/signup.css
+++ b/src/Components/Signup/signup.css
@@ -1,4 +1,4 @@
-.container-login{
+.container-signup{
     display: flex;
     height: 100vh;
     align-items: center;
@@ -6,14 +6,14 @@
     flex-direction: column;
 }
 
-.container-login > form{
+.container-signup > form{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
-.container-login > form > input{
+.container-signup > form > input{
     box-shadow: 2px 2px 2px rgba(0,0,0,0.08);
     padding: 10px;
     font-size: 18px;
@@ -22,15 +22,15 @@
     margin-bottom: 10px;
     background-color: var(--form);
 }
-.container-login > form > button{
+.container-signup > form > button{
     width: 300px;
     height: 50px;
 }
-.container-login > a{
+.container-signup > a{
     text-decoration: none;
     font-size: 18px;
     color: var(--text-alternative);
-    background-color: var(--button);
+    background-color: var(--button-dark);
     padding: 10px;
     text-shadow: 3px 3px 3px rgba(0,0,0,0.1);
     text-align: center;
