--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;700&display=swap');
 
 :root{
-    --background-body: #DDF4E7;
+    --background-body: #dee7df;
     --text-color: #436751;
     --text-alternative: #FFFFFF;
     --button: #75FAAA;
