--- a/src/Components/Tables/Table/table.css
+++ b/src/Components/Tables/Table/table.css
@@ -1,13 +1,22 @@
 .table-margin{
+    animation: opacity 0.5s;
     margin-bottom: 50px;
 }
-.container-table{
+.container-table, .container-title{
     display: grid;
     grid-template-columns: repeat(12, 100px);
     grid-gap: 10px;
     align-items: center;
     justify-content: center;
     margin-bottom: 10px;
+}
+
+.container-table{
+    transition-duration: 500ms;
+}
+
+.container-table:hover{
+    transform: scale(1.05);
 }
 
 .table{
@@ -48,11 +57,12 @@
     justify-content: center;
     align-items: center;
     background-color: var(--button);
+    color: var(--text-alternative);
     padding: 4px 8px;
     border-radius: 5px;
-    color: var(--text-alternative);
     cursor: pointer;
 }
+
 .icons > svg{
     filter: drop-shadow(3px 3px 3px rgb(0 0 0 / 0.1));
 }
@@ -60,6 +70,14 @@
 .icons > div{
     display: flex;
     align-items: center;
+}
+
+svg{
+    transition: transform 0.3s ease-in-out;
+}
+
+svg:hover{
+    transform: scale(1.2);
 }
 
 @media screen and (max-width:890px) {
