Adição da rota Logout

--- a/src/Components/Tables/Table/table.css
+++ b/src/Components/Tables/Table/table.css
@@ -85,7 +85,7 @@ svg:hover{
         display: none;
     }
 
-    .container-table{
+    .container-table, .container-title{
         display: flex;
     }
 
