--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;700&display=swap');
 
 :root{
-    --background-body: #dee7df;
-    --text-color: #436751;
+    --background-body: #dddddd;
+    --text-color: #212121;
     --text-alternative: #FFFFFF;
-    --button: #75FAAA;
-    --button-dark: #a2f8c5;
-    --modal: #DDF4E7;
-    --form: #EBFFF3;
+    --button: #323232;
+    --button-dark: #676767;
+    --modal: #eaeaea;
+    --form: #fcfcfc;
 }
 
 * {
