--- a/src/App.css
+++ b/src/App.css
@@ -59,6 +59,10 @@ a{
     text-decoration: none;
 }
 
+ul{
+    list-style-type: none;
+}
+
 .container{
     display: flex;
     justify-content: center;
