--- a/src/Components/Tables/Tables/tables.css
+++ b/src/Components/Tables/Tables/tables.css
@@ -15,10 +15,12 @@
 
 ul{
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 2px;
+    flex-direction: row;
+    margin: auto;
+    margin-top: 5px;
     margin-bottom: 10px;
+    justify-content: space-between;
+    width: 80%;
 }
 
 li{
